update one night before due

--- a/Exploratory Data Analysis.ipynb
+++ b/Exploratory Data Analysis.ipynb
@@ -31,25 +31,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "important features\n",
-    "age + past crime"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "where does the database come from\n",
-    "github link\n",
-    "compare the original database to csv that github link used "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "COMPAS technical documents\n",
-    "http://www.northpointeinc.com/files/technical_documents/FieldGuide2_081412.pdf"
+    "What is our research question? \n",
+    "\n",
+    "Current researches questioning prediction power of COMPAS mainly focus on racial bias. We are interested in how other factors, such as age, gender, marital status, and sentence type, might also result in biased COMPAS scores.\n",
+    "\n",
+    "COMPAS is black-boxed. We do not really know how it works inside: COMPAS never announce what and how many features they are using \n",
+    "\n",
+    "We are using probublica's data because we believe there are no better alternatives. \n",
+    "\n",
+    "Because COMPAS itself does not release data. Althought it has a [technical document]( http://www.northpointeinc.com/files/technical_documents/FieldGuide2_081412.pdf), it is very broad and does not include specific features it is using. \n",
+    "\n",
+    "Secondly, we also looked into researches prior than Propublica to see whether we may use their data. \n",
+    "\n",
+    "Thirdly, as for collection data ourselves, we don't think it is doable because as described in Propublica's article. There is limited released data from COMPAS (compas scores)and we have to find the corresponding in juridical decision published by government. "
    ]
   },
   {
@@ -63,8 +57,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Although we are not collecting data ourselves, instead we use data published at [Propublica's github](https://github.com/propublica/compas-analysis) . But we really tried to make sure that the data we are using now is ethically collected. \n",
+    "\n",
+    "Please find a summary of our research into [how Propublic collected its data](https://www.propublica.org/article/how-we-analyzed-the-compas-recidivism-algorithm) as below. \n",
+    "\n",
+    "Because Broward County primarily uses the score to determine whether to release or detain a defendant before his or her trial, we discarded scores that were assessed at parole, probation or other stages in the criminal justice system. That left us with 11,757 people who were assessed at the pretrial stage."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 3. inventiveness in getting and combining data(5)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -8960,7 +8970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 146,
    "metadata": {
     "scrolled": true
    },
@@ -8968,905 +8978,85 @@
     {
      "data": {
       "text/plain": [
-       "pandas.core.series.Series"
+       "True"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(compas_two_year['id'])"
+    "compas_two_year_violent['dob'][1] in compas_two_year['dob'].tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1982-01-22'"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compas_two_year_violent['dob'][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1982-01-22'"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compas_two_year['dob'][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7216\n",
-      "7217\n",
-      "7218\n",
-      "7219\n",
-      "7223\n",
-      "7224\n",
-      "7227\n",
-      "7231\n",
-      "7234\n",
-      "7235\n",
-      "7236\n",
-      "7237\n",
-      "7238\n",
-      "7240\n",
-      "7242\n",
-      "7245\n",
-      "7246\n",
-      "7249\n",
-      "7250\n",
-      "7257\n",
-      "7259\n",
-      "7263\n",
-      "7265\n",
-      "7266\n",
-      "7268\n",
-      "7269\n",
-      "7271\n",
-      "7272\n",
-      "7275\n",
-      "7276\n",
-      "7279\n",
-      "7281\n",
-      "7283\n",
-      "7284\n",
-      "7286\n",
-      "7291\n",
-      "7292\n",
-      "7293\n",
-      "7296\n",
-      "7298\n",
-      "7300\n",
-      "7302\n",
-      "7304\n",
-      "7310\n",
-      "7311\n",
-      "7312\n",
-      "7316\n",
-      "7317\n",
-      "7318\n",
-      "7321\n",
-      "7324\n",
-      "7326\n",
-      "7327\n",
-      "7328\n",
-      "7334\n",
-      "7337\n",
-      "7338\n",
-      "7343\n",
-      "7344\n",
-      "7347\n",
-      "7348\n",
-      "7351\n",
-      "7354\n",
-      "7355\n",
-      "7358\n",
-      "7359\n",
-      "7360\n",
-      "7361\n",
-      "7365\n",
-      "7368\n",
-      "7370\n",
-      "7373\n",
-      "7381\n",
-      "7384\n",
-      "7387\n",
-      "7388\n",
-      "7391\n",
-      "7392\n",
-      "7393\n",
-      "7394\n",
-      "7396\n",
-      "7399\n",
-      "7400\n",
-      "7406\n",
-      "7410\n",
-      "7411\n",
-      "7412\n",
-      "7416\n",
-      "7417\n",
-      "7419\n",
-      "7420\n",
-      "7421\n",
-      "7422\n",
-      "7424\n",
-      "7425\n",
-      "7426\n",
-      "7427\n",
-      "7432\n",
-      "7434\n",
-      "7435\n",
-      "7440\n",
-      "7441\n",
-      "7443\n",
-      "7444\n",
-      "7446\n",
-      "7447\n",
-      "7448\n",
-      "7451\n",
-      "7455\n",
-      "7465\n",
-      "7466\n",
-      "7467\n",
-      "7472\n",
-      "7475\n",
-      "7476\n",
-      "7477\n",
-      "7479\n",
-      "7480\n",
-      "7481\n",
-      "7482\n",
-      "7485\n",
-      "7487\n",
-      "7488\n",
-      "7490\n",
-      "7495\n",
-      "7496\n",
-      "7499\n",
-      "7500\n",
-      "7503\n",
-      "7508\n",
-      "7510\n",
-      "7511\n",
-      "7514\n",
-      "7517\n",
-      "7519\n",
-      "7520\n",
-      "7523\n",
-      "7524\n",
-      "7525\n",
-      "7530\n",
-      "7536\n",
-      "7538\n",
-      "7541\n",
-      "7545\n",
-      "7546\n",
-      "7547\n",
-      "7548\n",
-      "7553\n",
-      "7555\n",
-      "7556\n",
-      "7559\n",
-      "7561\n",
-      "7562\n",
-      "7563\n",
-      "7564\n",
-      "7567\n",
-      "7568\n",
-      "7570\n",
-      "7571\n",
-      "7574\n",
-      "7577\n",
-      "7578\n",
-      "7585\n",
-      "7586\n",
-      "7588\n",
-      "7595\n",
-      "7596\n",
-      "7597\n",
-      "7603\n",
-      "7604\n",
-      "7605\n",
-      "7606\n",
-      "7607\n",
-      "7613\n",
-      "7615\n",
-      "7618\n",
-      "7620\n",
-      "7634\n",
-      "7635\n",
-      "7636\n",
-      "7637\n",
-      "7639\n",
-      "7642\n",
-      "7644\n",
-      "7647\n",
-      "7648\n",
-      "7650\n",
-      "7651\n",
-      "7654\n",
-      "7655\n",
-      "7656\n",
-      "7657\n",
-      "7659\n",
-      "7660\n",
-      "7663\n",
-      "7667\n",
-      "7668\n",
-      "7669\n",
-      "7672\n",
-      "7673\n",
-      "7674\n",
-      "7677\n",
-      "7680\n",
-      "7681\n",
-      "7682\n",
-      "7685\n",
-      "7686\n",
-      "7688\n",
-      "7689\n",
-      "7692\n",
-      "7693\n",
-      "7694\n",
-      "7697\n",
-      "7698\n",
-      "7700\n",
-      "7704\n",
-      "7705\n",
-      "7706\n",
-      "7711\n",
-      "7712\n",
-      "7720\n",
-      "7723\n",
-      "7725\n",
-      "7726\n",
-      "7729\n",
-      "7735\n",
-      "7736\n",
-      "7737\n",
-      "7738\n",
-      "7740\n",
-      "7745\n",
-      "7747\n",
-      "7753\n",
-      "7754\n",
-      "7757\n",
-      "7763\n",
-      "7768\n",
-      "7770\n",
-      "7775\n",
-      "7786\n",
-      "7792\n",
-      "7794\n",
-      "7796\n",
-      "7800\n",
-      "7806\n",
-      "7807\n",
-      "7811\n",
-      "7812\n",
-      "7813\n",
-      "7817\n",
-      "7818\n",
-      "7820\n",
-      "7821\n",
-      "7834\n",
-      "7835\n",
-      "7837\n",
-      "7840\n",
-      "7842\n",
-      "7843\n",
-      "7846\n",
-      "7847\n",
-      "7848\n",
-      "7851\n",
-      "7859\n",
-      "7864\n",
-      "7867\n",
-      "7868\n",
-      "7869\n",
-      "7870\n",
-      "7871\n",
-      "7881\n",
-      "7882\n",
-      "7890\n",
-      "7894\n",
-      "7895\n",
-      "7898\n",
-      "7901\n",
-      "7902\n",
-      "7903\n",
-      "7904\n",
-      "7905\n",
-      "7909\n",
-      "7910\n",
-      "7913\n",
-      "7914\n",
-      "7915\n",
-      "7916\n",
-      "7917\n",
-      "7920\n",
-      "7922\n",
-      "7923\n",
-      "7928\n",
-      "7929\n",
-      "7931\n",
-      "7932\n",
-      "7935\n",
-      "7936\n",
-      "7943\n",
-      "7944\n",
-      "7945\n",
-      "7946\n",
-      "7948\n",
-      "7949\n",
-      "7952\n",
-      "7953\n",
-      "7958\n",
-      "7962\n",
-      "7963\n",
-      "7964\n",
-      "7969\n",
-      "7972\n",
-      "7973\n",
-      "7974\n",
-      "7977\n",
-      "7981\n",
-      "7983\n",
-      "7985\n",
-      "7987\n",
-      "7988\n",
-      "7989\n",
-      "7991\n",
-      "8002\n",
-      "8003\n",
-      "8007\n",
-      "8008\n",
-      "8009\n",
-      "8010\n",
-      "8019\n",
-      "8021\n",
-      "8023\n",
-      "8028\n",
-      "8031\n",
-      "8032\n",
-      "8035\n",
-      "8036\n",
-      "8038\n",
-      "8039\n",
-      "8040\n",
-      "8042\n",
-      "8045\n",
-      "8047\n",
-      "8048\n",
-      "8049\n",
-      "8050\n",
-      "8052\n",
-      "8054\n",
-      "8056\n",
-      "8059\n",
-      "8060\n",
-      "8061\n",
-      "8063\n",
-      "8068\n",
-      "8071\n",
-      "8075\n",
-      "8077\n",
-      "8078\n",
-      "8084\n",
-      "8085\n",
-      "8093\n",
-      "8094\n",
-      "8097\n",
-      "8098\n",
-      "8099\n",
-      "8104\n",
-      "8105\n",
-      "8107\n",
-      "8110\n",
-      "8112\n",
-      "8113\n",
-      "8115\n",
-      "8116\n",
-      "8118\n",
-      "8119\n",
-      "8120\n",
-      "8121\n",
-      "8125\n",
-      "8126\n",
-      "8129\n",
-      "8130\n",
-      "8132\n",
-      "8137\n",
-      "8138\n",
-      "8141\n",
-      "8143\n",
-      "8146\n",
-      "8148\n",
-      "8149\n",
-      "8150\n",
-      "8151\n",
-      "8153\n",
-      "8154\n",
-      "8155\n",
-      "8157\n",
-      "8160\n",
-      "8161\n",
-      "8162\n",
-      "8163\n",
-      "8164\n",
-      "8169\n",
-      "8171\n",
-      "8174\n",
-      "8182\n",
-      "8185\n",
-      "8188\n",
-      "8189\n",
-      "8191\n",
-      "8195\n",
-      "8204\n",
-      "8207\n",
-      "8209\n",
-      "8210\n",
-      "8211\n",
-      "8212\n",
-      "8215\n",
-      "8216\n",
-      "8217\n",
-      "8218\n",
-      "8220\n",
-      "8223\n",
-      "8224\n",
-      "8225\n",
-      "8230\n",
-      "8231\n",
-      "8232\n",
-      "8236\n",
-      "8237\n",
-      "8239\n",
-      "8240\n",
-      "8242\n",
-      "8245\n",
-      "8247\n",
-      "8248\n",
-      "8251\n",
-      "8253\n",
-      "8254\n",
-      "8257\n",
-      "8258\n",
-      "8259\n",
-      "8260\n",
-      "8261\n",
-      "8263\n",
-      "8265\n",
-      "8266\n",
-      "8267\n",
-      "8268\n",
-      "8277\n",
-      "8278\n",
-      "8279\n",
-      "8280\n",
-      "8281\n",
-      "8282\n",
-      "8284\n",
-      "8287\n",
-      "8288\n",
-      "8289\n",
-      "8291\n",
-      "8294\n",
-      "8296\n",
-      "8298\n",
-      "8299\n",
-      "8301\n",
-      "8303\n",
-      "8304\n",
-      "8306\n",
-      "8307\n",
-      "8309\n",
-      "8311\n",
-      "8312\n",
-      "8314\n",
-      "8317\n",
-      "8318\n",
-      "8328\n",
-      "8340\n",
-      "8341\n",
-      "8343\n",
-      "8347\n",
-      "8348\n",
-      "8349\n",
-      "8355\n",
-      "8358\n",
-      "8360\n",
-      "8361\n",
-      "8364\n",
-      "8365\n",
-      "8369\n",
-      "8373\n",
-      "8379\n",
-      "8381\n",
-      "8384\n",
-      "8386\n",
-      "8389\n",
-      "8390\n",
-      "8403\n",
-      "8404\n",
-      "8405\n",
-      "8407\n",
-      "8408\n",
-      "8411\n",
-      "8415\n",
-      "8416\n",
-      "8418\n",
-      "8419\n",
-      "8421\n",
-      "8423\n",
-      "8426\n",
-      "8427\n",
-      "8429\n",
-      "8434\n",
-      "8435\n",
-      "8437\n",
-      "8439\n",
-      "8440\n",
-      "8445\n",
-      "8446\n",
-      "8447\n",
-      "8448\n",
-      "8452\n",
-      "8456\n",
-      "8457\n",
-      "8458\n",
-      "8462\n",
-      "8463\n",
-      "8465\n",
-      "8468\n",
-      "8475\n",
-      "8476\n",
-      "8477\n",
-      "8478\n",
-      "8482\n",
-      "8483\n",
-      "8487\n",
-      "8488\n",
-      "8494\n",
-      "8500\n",
-      "8503\n",
-      "8507\n",
-      "8508\n",
-      "8511\n",
-      "8514\n",
-      "8515\n",
-      "8517\n",
-      "8520\n",
-      "8523\n",
-      "8524\n",
-      "8526\n",
-      "8528\n",
-      "8530\n",
-      "8532\n",
-      "8533\n",
-      "8539\n",
-      "8544\n",
-      "8546\n",
-      "8548\n",
-      "8550\n",
-      "8551\n",
-      "8560\n",
-      "8563\n",
-      "8565\n",
-      "8569\n",
-      "8572\n",
-      "8574\n",
-      "8575\n",
-      "8577\n",
-      "8578\n",
-      "8579\n",
-      "8580\n",
-      "8586\n",
-      "8589\n",
-      "8590\n",
-      "8594\n",
-      "8595\n",
-      "8597\n",
-      "8600\n",
-      "8604\n",
-      "8605\n",
-      "8608\n",
-      "8609\n",
-      "8610\n",
-      "8613\n",
-      "8616\n",
-      "8617\n",
-      "8618\n",
-      "8619\n",
-      "8621\n",
-      "8622\n",
-      "8625\n",
-      "8627\n",
-      "8629\n",
-      "8634\n",
-      "8635\n",
-      "8638\n",
-      "8639\n",
-      "8641\n",
-      "8642\n",
-      "8644\n",
-      "8646\n",
-      "8647\n",
-      "8650\n",
-      "8652\n",
-      "8653\n",
-      "8655\n",
-      "8656\n",
-      "8659\n",
-      "8661\n",
-      "8664\n",
-      "8668\n",
-      "8670\n",
-      "8672\n",
-      "8673\n",
-      "8674\n",
-      "8675\n",
-      "8676\n",
-      "8679\n",
-      "8682\n",
-      "8683\n",
-      "8684\n",
-      "8685\n",
-      "8686\n",
-      "8688\n",
-      "8691\n",
-      "8694\n",
-      "8695\n",
-      "8696\n",
-      "8701\n",
-      "8703\n",
-      "8705\n",
-      "8707\n",
-      "8708\n",
-      "8710\n",
-      "8711\n",
-      "8712\n",
-      "8715\n",
-      "8716\n",
-      "8717\n",
-      "8723\n",
-      "8726\n",
-      "8727\n",
-      "8728\n",
-      "8729\n",
-      "8731\n",
-      "8732\n",
-      "8733\n",
-      "8735\n",
-      "8737\n",
-      "8739\n",
-      "8743\n",
-      "8745\n",
-      "8746\n",
-      "8750\n",
-      "8752\n",
-      "8754\n",
-      "8756\n",
-      "8757\n",
-      "8758\n",
-      "8759\n",
-      "8761\n",
-      "8762\n",
-      "8764\n",
-      "8766\n",
-      "8768\n",
-      "8770\n",
-      "8771\n",
-      "8773\n",
-      "8774\n",
-      "8775\n",
-      "8777\n",
-      "8778\n",
-      "8785\n",
-      "8786\n",
-      "8787\n",
-      "8789\n",
-      "8790\n",
-      "8791\n",
-      "8794\n",
-      "8797\n",
-      "8798\n",
-      "8802\n",
-      "8803\n",
-      "8805\n",
-      "8807\n",
-      "8809\n",
-      "8812\n",
-      "8813\n",
-      "8814\n",
-      "8816\n",
-      "8818\n",
-      "8819\n",
-      "8820\n",
-      "8821\n",
-      "8826\n",
-      "8827\n",
-      "8828\n",
-      "8831\n",
-      "8835\n",
-      "8838\n",
-      "8842\n",
-      "8843\n",
-      "8844\n",
-      "8845\n",
-      "8849\n",
-      "8854\n",
-      "8856\n",
-      "8857\n",
-      "8858\n",
-      "8859\n",
-      "8861\n",
-      "8864\n",
-      "8865\n",
-      "8866\n",
-      "8867\n",
-      "8869\n",
-      "8870\n",
-      "8876\n",
-      "8877\n",
-      "8879\n",
-      "8881\n",
-      "8882\n",
-      "8884\n",
-      "8889\n",
-      "8890\n",
-      "8891\n",
-      "8893\n",
-      "8894\n",
-      "8897\n",
-      "8902\n",
-      "8905\n",
-      "8908\n",
-      "8909\n",
-      "8914\n",
-      "8916\n",
-      "8922\n",
-      "8923\n",
-      "8924\n",
-      "8925\n",
-      "8935\n",
-      "8936\n",
-      "8938\n",
-      "8939\n",
-      "8940\n",
-      "8943\n",
-      "8944\n",
-      "8945\n",
-      "8946\n",
-      "8948\n",
-      "8949\n",
-      "8950\n",
-      "8954\n",
-      "8955\n",
-      "8959\n",
-      "8961\n",
-      "8962\n",
-      "8967\n",
-      "8971\n",
-      "8973\n",
-      "8974\n",
-      "8976\n",
-      "8983\n",
-      "8984\n",
-      "8988\n",
-      "8991\n",
-      "8995\n",
-      "8996\n",
-      "8997\n",
-      "8999\n",
-      "9003\n",
-      "9004\n",
-      "9005\n",
-      "9008\n",
-      "9010\n",
-      "9012\n",
-      "9013\n",
-      "9018\n",
-      "9023\n",
-      "9028\n",
-      "9030\n",
-      "9032\n",
-      "9033\n",
-      "9038\n",
-      "9039\n",
-      "9040\n",
-      "9041\n",
-      "9042\n",
-      "9043\n",
-      "9045\n",
-      "9046\n",
-      "9047\n",
-      "9049\n",
-      "9054\n",
-      "9060\n",
-      "9062\n",
-      "9067\n",
-      "9070\n",
-      "9072\n",
-      "9074\n",
-      "9075\n",
-      "9077\n",
-      "9081\n",
-      "9085\n",
-      "9087\n",
-      "9088\n",
-      "9089\n",
-      "9093\n",
-      "9096\n",
-      "9099\n",
-      "9102\n",
-      "9104\n",
-      "9109\n",
-      "9116\n",
-      "9120\n",
-      "9123\n",
-      "9125\n",
-      "9126\n",
-      "9127\n",
-      "9129\n",
-      "9131\n",
-      "9132\n",
-      "9133\n",
-      "9136\n",
-      "9143\n",
-      "9144\n",
-      "9146\n",
-      "9147\n",
-      "9148\n",
-      "9150\n",
-      "9157\n",
-      "9159\n",
-      "9160\n",
-      "9161\n",
-      "9165\n",
-      "9166\n",
-      "9167\n",
-      "9170\n",
-      "9172\n",
-      "9173\n",
-      "9180\n",
-      "9183\n",
-      "9186\n",
-      "9188\n",
-      "9189\n",
-      "9192\n",
-      "9200\n",
-      "9202\n",
-      "9203\n",
-      "9205\n",
-      "9207\n",
-      "9212\n",
-      "9214\n",
-      "9215\n",
-      "9216\n",
-      "9219\n",
-      "9220\n",
-      "9224\n",
-      "9227\n",
-      "9229\n",
-      "9230\n",
-      "9231\n",
-      "9233\n",
-      "9234\n",
-      "9235\n",
-      "9238\n",
-      "9241\n",
-      "9242\n",
-      "9243\n",
-      "9245\n",
-      "9246\n",
-      "9248\n",
-      "9249\n",
-      "9253\n",
-      "9254\n",
-      "9255\n"
+      "3708\n",
+      "4995\n",
+      "6283\n",
+      "7132\n",
+      "8766\n"
      ]
     }
    ],
    "source": [
     "for i in range(4000):\n",
-    "    if compas_two_year_violent['id'][i] not in compas_two_year['id']:\n",
+    "    if compas_two_year_violent['id'][i] not in compas_two_year['id'].tolist():\n",
     "        print(compas_two_year_violent['id'][i])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
