--- a/Exploratory Data Analysis.ipynb
+++ b/Exploratory Data Analysis.ipynb
@@ -33,17 +33,15 @@
    "source": [
     "What is our research question? \n",
     "\n",
-    "Current researches questioning prediction power of COMPAS mainly focus on racial bias. We are interested in how other factors, such as age, gender, marital status, and sentence type, might also result in biased COMPAS scores.\n",
+    "State-of-the-art researches questioning fairness of COMPAS scores mainly focus on racial bias. We are interested in how other factors, such as age, gender, marital status, and sentence type, might also result in biased COMPAS scores.\n",
     "\n",
-    "COMPAS is black-boxed. We do not really know how it works inside: COMPAS never announce what and how many features they are using \n",
+    "COMPAS is black box. We do not really know how the scoring system works: how many features it is using, what exactly are the features, etc.\n",
     "\n",
-    "We are using probublica's data because we believe there are no better alternatives. \n",
+    "COMPAS itself did not have open database. But it does have a [technical document]( http://www.northpointeinc.com/files/technical_documents/FieldGuide2_081412.pdf) for how to inteprete COMPAS scores. \n",
     "\n",
-    "Because COMPAS itself does not release data. Althought it has a [technical document]( http://www.northpointeinc.com/files/technical_documents/FieldGuide2_081412.pdf), it is very broad and does not include specific features it is using. \n",
+    "As for COMPAS score and crime data, we are drawing from a [open sourced project on github done by Propublica](https://github.com/propublica/compas-analysis). We believe comparing to its data, there are no better alternative. Since COMPAS is black box and commercial, it is challenging for us to directly request data from it. We also looked into other researches on COMPAS, but they gave way to Propublica either because of smaller data set or less complete inmate profile. \n",
     "\n",
-    "Secondly, we also looked into researches prior than Propublica to see whether we may use their data. \n",
-    "\n",
-    "Thirdly, as for collection data ourselves, we don't think it is doable because as described in Propublica's article. There is limited released data from COMPAS (compas scores)and we have to find the corresponding in juridical decision published by government. "
+    "Propublica has three main csvs to store data: compas-scores-raw.csv, compas-scores-two-years.csv and compas-scores-two-years-violent.csv. "
    ]
   },
   {
@@ -59,9 +57,23 @@
    "source": [
     "Although we are not collecting data ourselves, instead we use data published at [Propublica's github](https://github.com/propublica/compas-analysis) . But we really tried to make sure that the data we are using now is ethically collected. \n",
     "\n",
-    "Please find a summary of our research into [how Propublic collected its data](https://www.propublica.org/article/how-we-analyzed-the-compas-recidivism-algorithm) as below. \n",
+    "#### Please find a summary of our research into [how Propublic collected its data](https://www.propublica.org/article/how-we-analyzed-the-compas-recidivism-algorithm) as follows. \n",
     "\n",
-    "Because Broward County primarily uses the score to determine whether to release or detain a defendant before his or her trial, we discarded scores that were assessed at parole, probation or other stages in the criminal justice system. That left us with 11,757 people who were assessed at the pretrial stage."
+    "\n",
+    "Because [Broward County](https://en.wikipedia.org/wiki/Broward_County,_Florida) primarily uses the score to determine whether to release or detain a defendant before his or her trial, we discarded scores that were assessed at parole, probation or other stages in the criminal justice system. That left us with 11,757 people who were assessed at the pretrial stage.\n",
+    "\n",
+    "#### Demographics - 2015 5-Year American Community Survey:\n",
+    "\n",
+    "Households & Families\n",
+    "As of the 2015 5-year ACS, Broward County had 1,843,152 people, 670,284 households, and 425,680 families. Of the 670,284 households in Broward County, 26.2% had children under the age of 18 living with them, 43% were married couples living together, 15.6% had a female householder with no husband present, and 36.5% were non-families. 29.6% of all households were made up of individuals and 11.6% had someone living alone who was 65 years of age or older. The average household size was 2.73 and the average family size was 3.43.\n",
+    "\n",
+    "Age\n",
+    "In the county, the population was spread out with 21.7% under the age of 18, 8.5% from 18 to 24, 26.9% from 25 to 44, 27.7% from 45 to 64, and 15.0% who were 65 years of age or older. The median age was 40 years. For every 100 females, there were 94.4 males. For every 100 females age 18 and over, there were 98.7 males.\n",
+    "\n",
+    "Race, Ancestry & Nationality\n",
+    "The racial makeup of the county was 62.3% White, 17.1% Hispanic, 12.2% Black or African American, 5.07% Asian, 2.20% from two or more races, 0.66% Native American, 0.16% Pacific Islander, and 0.20% from some other race. The racial makeup of the total Hispanic population in Broward County was: 65.8% White, 5.90% Native American, 2.06% Black or African American, 0.33% Asian, 0.86% Pacific Islander, 26.23% were some other race and 4.57% were from two or more races. In 2015, with relation to ancestry (excluding the various Hispanic and Latino ancestries), 7.38% were Italian, 7.70% American, 6.44% German, 6.54% Irish, 3.8% English, 2.6% Polish and 2.2% Russian ancestry. Also, among West Indians, 6.33% were Haitian and 5.96% were Jamaican. In 2015, 32.2% of the county's population was foreign born, with 18.14% being naturalized American citizens. Of foreign born residents, 78.9% were born in Latin America, 7.88% were born in Europe, 8.52% born in Asia, 3.11% in North America, 1.34% born in Africa and 0.15 were born in Oceania.\n",
+    "\n",
+    "2018 Republican 31.3%  Democratic 67.9%"
    ]
   },
   {
@@ -74,7 +86,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Besides data directly acquired from Propublica, we are using demographic information of Broward county from [2015 5-Year American community Servey](https://www.census.gov/programs-surveys/acs/technical-documentation/table-and-geography-changes/2015/5-year.html#par_textimage_0) and [broward.org](http://www.broward.org/Planning/Demographics/Pages/default.aspx)"
+   ]
   },
   {
    "cell_type": "markdown",
